<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nilai1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nilai_1"/>

    <EditText
        android:id="@+id/nilai2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nilai_2"/>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nilai"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah"/>

        <Button
            android:id="@+id/kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurang"/>

        <Button
            android:id="@+id/kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kali"/>

        <Button
            android:id="@+id/bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagi"/>

        <Button
            android:id="@+id/Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"/>
    </LinearLayout>

</LinearLayout>